samples/_failures_safe/1761457653_60b95b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ca6c07d1.c: In function ‘main’:
./samples/SAFE/__tmp_ca6c07d1.c:123:39: error: expected ‘)’ at end of input
  123 |                     print_matrix(rows1
      |                                 ~     ^
      |                                       )
./samples/SAFE/__tmp_ca6c07d1.c:123:21: error: too few arguments to function ‘print_matrix’
  123 |                     print_matrix(rows1
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_ca6c07d1.c:33:6: note: declared here
   33 | void print_matrix(int rows, int cols, int matrix[MAX_DIM][MAX_DIM]) {
      |      ^~~~~~~~~~~~
./samples/SAFE/__tmp_ca6c07d1.c:123:21: error: expected declaration or statement at end of input
  123 |                     print_matrix(rows1
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_ca6c07d1.c:123:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ca6c07d1.c:123:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ca6c07d1.c:123:21: error: expected declaration or statement at end of input
